# GradientX-Deep-Learning-Library

./: CMakeLists.txt  README.md  arena.cpp  arena.hpp  base.hpp  export_web_data.py  getfashion.py  getmnist.py  import_custom_dataset.py  main.cpp  matrix.cpp  matrix.hpp  model.cpp  model.hpp  presentation.html  prng.cpp  prng.hpp  web_data.js
